kubernetes-deployment/pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: pg-db
spec:
 replicas: 1
 selector:
      matchLabels:
        app: postgres
 template:
   metadata:
      labels:
        app: postgres
   spec:
     containers:
     - name: pg
       image: postgres:latest
       imagePullPolicy: IfNotPresent
       ports:
         - containerPort: 5432
       volumeMounts:
         - mountPath: /var/lib/postgresql/data
           name: pg-data
           subPath: postgres
     volumes:
       - name: pg-data
         persistentVolumeClaim:
           claimName: pg-claim
