kubernetes-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/cardsets
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 1337
      - path: /api/clusters
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 1337
      - path: /api/cluster
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 1337
